--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "ext/wxWidgets"]
 	path = ext/wxWidgets
-	url = https://github.com/wxWidgets/wxWidgets.git
+	url = https://github.com/nwhitehead/wxWidgets.git
 	branch = WX_3_0_BRANCH
